[package]
name = "qrcode-cli"
version = "0.8.0"
authors = ["Leonid Beder <leonid.beder@gmail.com>"]
edition = "2018"

[dependencies]
getopts = "0.2.21"
qrcode = "0.12.0"
strum = "0.22.0"
strum_macros = "0.22.0"
svgdom = "0.18.0"
resvg = "0.19.0"
tiny-skia = "0.6.1"

[dev-dependencies]
quirc = "0.0.1"
tempfile = "3.2.0"
image = "0.23.14"
usvg = "0.19.0"
