[package]
authors = ["Leonid Beder <leonid@lbeder.com>"]
edition = "2021"
name = "qrcode-cli"
version = "0.10.0"

[dependencies]
getopts = "0.2.21"
qrcode = "0.12.0"
resvg = "0.19.0"
strum = "0.22.0"
strum_macros = "0.22.0"
svgdom = "0.18.0"
tiny-skia = "0.6.1"

[dev-dependencies]
image = "0.23.14"
quirc = "0.0.1"
tempfile = "3.2.0"
usvg = "0.19.0"

[profile.release]
panic = "abort"

[profile.profile]
debug = true
inherits = "release"
